# AStroburner-UI

./: .editorconfig  .gitignore  ADVANCED_MODELS_ARCHITECTURE.md  BUGFIX_v1.2.1.md  CHANGELOG.md  CHECK_CUDA.md  CONTRIBUTING.md  DOWNLOAD_AND_INSTALL.md  ICON_SETUP_WINDOWS.md  INSTALL.md  INSTALL_AFTER_EXTRACT.md  LICENSE  NEW_MODELS_v1.7.1.md  NSFW_FILTER.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RTX_5090_SETUP.md  SETUP.md  SETUP_BAT_README.md  TROUBLESHOOTING.md  UPDATE_INSTRUCTIONS.md  fix-dialog-plugin.bat  quick-fix-dependencies.bat  setup.bat  start.bat  start.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/: .env.example  __init__.py  config.py  fix_cuda.bat  main.py  requirements-cuda121.txt  requirements-cuda128.txt  requirements-dev.txt  requirements.txt  run.bat
backend/api/: routes.py
backend/core/: gpu_monitor.py  model_manager.py
backend/models/: database.py  schemas.py
backend/utils/: model_detector.py
frontend/: index.html  package-lock.json  package.json  rebuild-tauri.bat  run.bat  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: README.md  create_icons.sh  create_icons_windows.bat
frontend/src-tauri/src/: main.rs
frontend/src/components/: CustomModelAddForm.tsx  CustomModelList.tsx  GeneratePanel.tsx  Header.tsx  HistoryPanel.tsx  ImageGallery.tsx  ImagePlaceholder.tsx  LoRAAddForm.tsx  LoRAList.tsx  SettingsPanel.tsx  Toast.tsx
frontend/src/hooks/: useAppStore.ts
models/: README.md  __init__.py
(+3 files in other folders)
